# copied-city

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c5c3116  README.md  build.ninja  projects_realtime  qtcsettings.cmake
glm/: cmake_install.cmake
resources/shaders/: default.frag  default.vert  depth.frag  depth.vert  ssao.frag  ssao_blur.frag  ssao_gbuffer.frag  ssao_gbuffer.vert  texture.frag  texture.vert
src/: main.cpp  mainwindow.cpp  mainwindow.h  raytracer_driver.h  realtime.cpp  realtime.h  settings.h
src/camera/: camera.cpp  camera.h  transforms.cpp  transforms.h
src/citygenerator/: block.h  cityfacade.cpp  cubegrowths.cpp  generator.cpp  generator.h  objutils.h  staticposdata.h
src/cityrenderer/: blocktexture.cpp  rendercity.cpp  rendershadow.cpp  rendersky.cpp  renderssao.cpp
src/filter/: filter.h
src/raytracer/: bvh.h  implicit.h  primitive.cpp  primitive.h  raytracer.cpp  raytracer.h  raytracescene.cpp  raytracescene.h  utils.cpp  utils.h
src/renderer/: debug.h  primitive.cpp  primitive.h  render.cpp
src/shader/: phong.cpp  phong.h  shadow.cpp  shadow.h  texture.cpp  texture.h
src/trimeshes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  obj_mesh.cpp  obj_mesh.h  sphere.cpp  sphere.h  trimesh.h
src/utils/: rgba.h  scenedata.h  scenefilereader.cpp  scenefilereader.h  sceneparser.cpp  sceneparser.h  shaderloader.h
